now turning camera off when disabling internet, and camera not required to turn internet off

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -32,12 +32,12 @@
         <td id='<%= "user#{user.id}-status-td" %>' class="user-status">
           <div id="disabled-note" hidden>Disabled</div>
           <input id='<%= "user#{user.id}-status" %>'
-                   class='user-status'
-                   <%= user.active ? 'checked' : '' %>
-                   data-toggle="toggle"
-                   data-userid='<%= user.id %>'
+                 class='user-status'
+                 <%= user.active ? 'checked' : '' %>
+                 data-toggle="toggle"
+                 data-userid='<%= user.id %>'
                  data-userrole='<%= user.role %>'
-                   type="checkbox"></td>
+                 type="checkbox"></td>
       </tr>
   <% end %>
   </tbody>
@@ -81,12 +81,12 @@
       var goActive = !$slideToggle.is(':checked');
 
       var doAjax = function () {
-      $.ajax({
-        context: this,
-        type: 'POST', // Use POST with X-HTTP-Method-Override or a straight PUT if appropriate.
-        dataType: 'json', // Set datatype - affects Accept header
+        $.ajax({
+          context: this,
+          type: 'POST', // Use POST with X-HTTP-Method-Override or a straight PUT if appropriate.
+          dataType: 'json', // Set datatype - affects Accept header
           url: '/users/' + $slideToggle.attr('data-userid') + '.json', // A valid URL
-        headers: {"X-HTTP-Method-Override": "PUT"}, // X-HTTP-Method-Override set to PUT.
+          headers: {"X-HTTP-Method-Override": "PUT"}, // X-HTTP-Method-Override set to PUT.
           data: {user: {active: goActive, camera: videoEnabled}}, // Some data e.g. Valid JSON as a string
           success: function (data, textStatus, jqXHR) {
             var resp = JSON.parse(jqXHR.responseText)
@@ -94,13 +94,13 @@
               toastr.error('Unable to ' + (goActive ? 'enable' : 'disable') + ' internet.  ' + resp.error);
             } else {
               if (goActive) {
-            toastr.success('Internet successfully enabled.');
-          } else {
-            toastr.info('Internet successfully disabled.');
-          }
+                toastr.success('Internet successfully enabled.');
+              } else {
+                toastr.info('Internet successfully disabled.');
+              }
               toggleWithoutEvent($slideToggle)
             }
-        },
+          },
           error: function (jqXHR) {
             var resp = JSON.parse(jqXHR.responseText)
             if (resp.error) {
@@ -108,11 +108,15 @@
             } else {
               toastr.error('Unable to ' + (goActive ? 'enable' : 'disable') + ' internet.  ');
             }
-        },
-        complete: function () {
+          },
+          complete: function () {
             $slideToggle.bootstrapToggle('enable');
-        }
-      });
+            if (!$slideToggle.is(':checked')) {
+              document.querySelector('video').srcObject = null
+              videoEnabled = false;
+            }
+          }
+        });
       }
 
       if (goActive && $slideToggle.attr('data-userrole') !== '0' && !videoEnabled) {
