--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -47,21 +47,26 @@
 
 <script>
   $(document).ready(function () {
-    var videoEnabled = false;
+    var videoUsers = 0;
 
     var startCamera = function (cb) {
-      var videoElem = document.querySelector('video');
-      var onError = function (err) {
-        console.log('unable to access camera: ' + err.message);
+      if (videoUsers > 0) {
+        videoUsers++;
         cb();
+      } else {
+        var videoElem = document.querySelector('video');
+        var onError = function (err) {
+          console.log('unable to access camera: ' + err.message);
+          cb();
+        }
+        var initializeVideo = function (mediaStream) {
+          videoElem.srcObject = mediaStream
+          videoUsers++;
+          cb();
+        }
+        navigator.mediaDevices.getUserMedia({video: {height: 240, width: 320}})
+          .then(initializeVideo).catch(onError);
       }
-      var initializeVideo = function (mediaStream) {
-        videoElem.srcObject = mediaStream
-        videoEnabled = true;
-        cb();
-      }
-      navigator.mediaDevices.getUserMedia({video: {height: 240, width: 320}})
-        .then(initializeVideo).catch(onError);
     }
 
     $('input.user-status').bootstrapToggle();
@@ -87,7 +92,7 @@
           dataType: 'json', // Set datatype - affects Accept header
           url: '/users/' + $slideToggle.attr('data-userid') + '.json', // A valid URL
           headers: {"X-HTTP-Method-Override": "PUT"}, // X-HTTP-Method-Override set to PUT.
-          data: {user: {active: goActive, camera: videoEnabled}}, // Some data e.g. Valid JSON as a string
+          data: {user: {active: goActive, camera: videoUsers > 0}}, // Some data e.g. Valid JSON as a string
           success: function (data, textStatus, jqXHR) {
             var resp = JSON.parse(jqXHR.responseText)
             if (resp.error) {
@@ -111,15 +116,17 @@
           },
           complete: function () {
             $slideToggle.bootstrapToggle('enable');
-            if (!$slideToggle.is(':checked') && $slideToggle.attr('data-userrole') !== '0') {
-              document.querySelector('video').srcObject = null
-              videoEnabled = false;
+            if (!$slideToggle.is(':checked') && $slideToggle.attr('data-userrole') !== '0' && videoUsers > 0) {
+              videoUsers--;
+              if (videoUsers < 1) {
+                document.querySelector('video').srcObject = null
+              }
             }
           }
         });
       }
 
-      if (goActive && $slideToggle.attr('data-userrole') !== '0' && !videoEnabled) {
+      if (goActive && $slideToggle.attr('data-userrole') !== '0') {
         startCamera(doAjax);
       } else {
         doAjax();
